knative/knative-serving-install/base/webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  labels:
<<<<<<< HEAD
<<<<<<< HEAD
    serving.knative.dev/release: "v0.11.1"
=======
    serving.knative.dev/release: "v0.11.2"
>>>>>>> 0dd7b24f049aaff540231bf73fe153c2397be890
=======
    serving.knative.dev/release: v0.14.3
>>>>>>> upstream/master
  name: webhook.serving.knative.dev
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: webhook
      namespace: knative-serving
  failurePolicy: Fail
  name: webhook.serving.knative.dev
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    serving.knative.dev/release: v0.14.3
  name: webhook.istio.networking.internal.knative.dev
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: istio-webhook
      namespace: knative-serving
  failurePolicy: Fail
  name: webhook.istio.networking.internal.knative.dev
  objectSelector:
    matchExpressions:
    - key: serving.knative.dev/configuration
      operator: Exists
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
<<<<<<< HEAD
<<<<<<< HEAD
    serving.knative.dev/release: "v0.11.1"
=======
    serving.knative.dev/release: "v0.11.2"
>>>>>>> 0dd7b24f049aaff540231bf73fe153c2397be890
=======
    serving.knative.dev/release: v0.14.3
>>>>>>> upstream/master
  name: validation.webhook.serving.knative.dev
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: webhook
      namespace: knative-serving
  failurePolicy: Fail
  name: validation.webhook.serving.knative.dev
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
<<<<<<< HEAD
<<<<<<< HEAD
    serving.knative.dev/release: "v0.11.1"
=======
    serving.knative.dev/release: "v0.11.2"
>>>>>>> 0dd7b24f049aaff540231bf73fe153c2397be890
=======
    serving.knative.dev/release: v0.14.3
>>>>>>> upstream/master
  name: config.webhook.serving.knative.dev
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: webhook
      namespace: knative-serving
  failurePolicy: Fail
  name: config.webhook.serving.knative.dev
  namespaceSelector:
    matchExpressions:
    - key: serving.knative.dev/release
      operator: Exists
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
<<<<<<< HEAD
<<<<<<< HEAD
    serving.knative.dev/release: "v0.11.1"
=======
    serving.knative.dev/release: "v0.11.2"
>>>>>>> 0dd7b24f049aaff540231bf73fe153c2397be890
  name: webhook-certs
  namespace: knative-serving

=======
    serving.knative.dev/release: v0.14.3
  name: config.webhook.istio.networking.internal.knative.dev
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: istio-webhook
      namespace: knative-serving
  failurePolicy: Fail
  name: config.webhook.istio.networking.internal.knative.dev
  namespaceSelector:
    matchExpressions:
    - key: serving.knative.dev/release
      operator: Exists
  sideEffects: None
>>>>>>> upstream/master
